--- a/project/Weather/index.html
+++ b/project/Weather/index.html
@@ -37,7 +37,7 @@
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" async></script>
     <script>
-        const apiKey = "5770e65c28460e1c96c6dd165edd5560";
+        const apiKey = "";
         const api = `https://api.openweathermap.org/data/2.5/weather?q=`;
         const form = document.getElementById('formSy');
         const search = document.getElementById('search');
