refactor code beberapa project agar mudah di maintenance dan dikembangkan

--- a/project/restoran/index.html
+++ b/project/restoran/index.html
@@ -23,44 +23,89 @@
         crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
     <script>
+        // const api = `https://restaurant-api.dicoding.dev/list`;
+        // const rowRestoran = document.getElementById('rowRestoran');
+        // const smallResolution = `https://restaurant-api.dicoding.dev/images/small/`;
+        // const mediumResolution = `https://restaurant-api.dicoding.dev/images/medium/`;
+        // const largeResolution = `https://restaurant-api.dicoding.dev/images/large/`;
+
+        // async function restoranList(){
+        //     try{
+        //         const response = await fetch(`${api}`);
+        //         const data = await response.json();
+        //         console.log(data);
+
+        //         data.restaurants.forEach(restaurant => {
+        //             const cardDiv = document.createElement('div');
+        //             cardDiv.className = 'col-lg-4 col-md-6 col-sm-12 my-3';
+        //             cardDiv.innerHTML = `
+        //                 <div class="card">
+        //                     <img src="${mediumResolution}${restaurant.pictureId}" alt="${restaurant.name}" height="200px">
+        //                     <div class="card-body">
+        //                         <h4 class="card-title">${restaurant.name}</h4>
+        //                         <div class="cityNrating d-flex justify-content-between">
+        //                             <h5 class="card-title">${restaurant.city}</h5>
+        //                             <h5 class="card-title">Rating: ${restaurant.rating}</h5>
+        //                         </div>
+        //                         <p class="card-text">${_.truncate(restaurant.description, { length: 200 })}</p>
+        //                         <a href="#" class="btn btn-primary">Go somewhere</a>
+        //                     </div>
+        //                 </div>
+        //             `;
+
+        //             rowRestoran.appendChild(cardDiv);
+        //         });
+        //     } catch (error) {
+        //         console.error('Error fetching restaurant data:', error);
+        //     }
+        // }
+
+        // restoranList();
+
         const api = `https://restaurant-api.dicoding.dev/list`;
-        const rowRestoran = document.getElementById('rowRestoran');
-        const smallResolution = `https://restaurant-api.dicoding.dev/images/small/`;
-        const mediumResolution = `https://restaurant-api.dicoding.dev/images/medium/`;
-        const largeResolution = `https://restaurant-api.dicoding.dev/images/large/`;
+const rowRestoran = document.getElementById('rowRestoran');
+const smallResolution = `https://restaurant-api.dicoding.dev/images/small/`;
+const mediumResolution = `https://restaurant-api.dicoding.dev/images/medium/`;
+const largeResolution = `https://restaurant-api.dicoding.dev/images/large/`;
 
-        async function restoranList(){
-            try{
-                const response = await fetch(`${api}`);
-                const data = await response.json();
-                console.log(data);
+// Function to create a restaurant card
+function createRestaurantCard(restaurant) {
+    return `
+        <div class="card">
+            <img src="${mediumResolution}${restaurant.pictureId}" alt="${restaurant.name}" height="200px">
+            <div class="card-body">
+                <h4 class="card-title">${restaurant.name}</h4>
+                <div class="cityNrating d-flex justify-content-between">
+                    <h5 class="card-title">${restaurant.city}</h5>
+                    <h5 class="card-title">Rating: ${restaurant.rating}</h5>
+                </div>
+                <p class="card-text">${_.truncate(restaurant.description, { length: 200 })}</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    `;
+}
 
-                data.restaurants.forEach(restaurant => {
-                    const cardDiv = document.createElement('div');
-                    cardDiv.className = 'col-lg-4 col-md-6 col-sm-12 my-3';
-                    cardDiv.innerHTML = `
-                        <div class="card">
-                            <img src="${mediumResolution}${restaurant.pictureId}" alt="${restaurant.name}" height="200px">
-                            <div class="card-body">
-                                <h4 class="card-title">${restaurant.name}</h4>
-                                <div class="cityNrating d-flex justify-content-between">
-                                    <h5 class="card-title">${restaurant.city}</h5>
-                                    <h5 class="card-title">Rating: ${restaurant.rating}</h5>
-                                </div>
-                                <p class="card-text">${_.truncate(restaurant.description, { length: 200 })}</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                    `;
+// Function to fetch and display restaurant list
+async function displayRestaurants() {
+    try {
+        const response = await fetch(api);
+        const data = await response.json();
+        console.log(data);
 
-                    rowRestoran.appendChild(cardDiv);
-                });
-            } catch (error) {
-                console.error('Error fetching weather data:', error);
-            }
-        }
+        data.restaurants.forEach(restaurant => {
+            const cardDiv = document.createElement('div');
+            cardDiv.className = 'col-lg-4 col-md-6 col-sm-12 my-3';
+            cardDiv.innerHTML = createRestaurantCard(restaurant);
 
-        restoranList();
+            rowRestoran.appendChild(cardDiv);
+        });
+    } catch (error) {
+        console.error('Error fetching restaurant data:', error);
+    }
+}
+
+displayRestaurants();
 
     </script>
 </body>
