--- a/project/Kartu-nama/index.html
+++ b/project/Kartu-nama/index.html
@@ -1,136 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kartu Nama</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <style>
-    
+    /* Add any additional styles here */
   </style>
 </head>
-
 <body>
   <section style="padding: 50px 0;">
     <div class="container text-white rounded-3" style="background-color: rgb(33, 33, 33); padding: 20px;">
-        <div class="head text-center">
-            <h2>Buat Kartu Nama Sederhana</h2>
+      <div class="head text-center">
+        <h2>Buat Kartu Nama Sederhana</h2>
+      </div>
+      <form id="myForm">
+        <div class="mb-3">
+          <label for="nama" class="form-label">Nama:</label>
+          <input type="text" class="form-control" id="nama">
         </div>
-        <form id="myForm">
-            <div class="mb-3">
-                <label for="nama" class="form-label">Nama:</label>
-                <input type="text" class="form-control" id="nama">
-              </div>
-              <div class="mb-3">
-                <label for="skill" class="form-label">Keahlian:</label>
-                <input type="text" class="form-control" id="skill">
-              </div>
-              <div class="mb-3">
-                <label for="telpon" class="form-label">No Telpon:</label>
-                <input type="text" class="form-control" id="telpon">
-              </div>
-              <div class="mb-3">
-                <label for="alamat" class="form-label">Alamat:</label>
-                <input type="text" class="form-control" id="alamat">
-              </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-        <div id="output" class="output" style="margin-top: 50px;">
-            <!-- <div class="card shadow-lg bg-body-secondary text-black" style="padding: 30px;">
-                <div class="row">
-                    <div class="col-5 text-center my-auto">
-                        <h3>Hafizh Muhammad Azhar</h3>
-                    </div>
-                    <div class="col border-start border-black text-center my-auto">
-                        <div class="skill">
-                            <h4>Skills:</h4>
-                            <p>ngoding</p>
-                        </div>
-                        <div class="telpon">
-                            <h4>No Telpon:</h4>
-                            <p>08292929292</p>
-                        </div>
-                        <div class="alamat">
-                            <h4>Alamat:</h4>
-                            <p>tangerang</p>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
+        <div class="mb-3">
+          <label for="skill" class="form-label">Keahlian:</label>
+          <input type="text" class="form-control" id="skill">
         </div>
+        <div class="mb-3">
+          <label for="telpon" class="form-label">No Telpon:</label>
+          <input type="text" class="form-control" id="telpon">
+        </div>
+        <div class="mb-3">
+          <label for="alamat" class="form-label">Alamat:</label>
+          <input type="text" class="form-control" id="alamat">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+
+      <form id="updateForm" class="my-3" style="display: none;">
+        <div class="mb-3">
+          <label for="updatenama" class="form-label">Update Nama:</label>
+          <input type="text" class="form-control" id="updatenama">
+        </div>
+        <div class="mb-3">
+          <label for="updateskill" class="form-label">Update Keahlian:</label>
+          <input type="text" class="form-control" id="updateskill">
+        </div>
+        <div class="mb-3">
+          <label for="updatetelpon" class="form-label">Update No Telpon:</label>
+          <input type="text" class="form-control" id="updatetelpon">
+        </div>
+        <div class="mb-3">
+          <label for="updatealamat" class="form-label">Update Alamat:</label>
+          <input type="text" class="form-control" id="updatealamat">
+        </div>
+        <button type="submit" class="btn btn-primary">Update</button>
+      </form>
+      <div id="output" class="output" style="margin-top: 50px;"></div>
     </div>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   <script>
+    const form = document.getElementById('myForm');
+    const updateForm = document.getElementById('updateForm');
+    const output = document.getElementById('output');
+    const cards = [];
 
-const form = document.getElementById('myForm');
-        const output = document.getElementById('output');
-        const nama = document.getElementById('nama');
-        const skill = document.getElementById('skill');
-        const telpon = document.getElementById('telpon');
-        const alamat = document.getElementById('alamat');
-        const arr = [];
-
-        form.addEventListener('submit', (e) => {
-            e.preventDefault();
-
-            const namaValue = nama.value;
-            const skillValue = skill.value;
-            const telponValue = telpon.value;
-            const alamatValue = alamat.value;
-
-            const escapeHTML = (unsafe) => {
-  return unsafe.replace(/[&<"']/g, (match) => {
-    switch (match) {
-      case '&':
-        return '&amp;';
-      case '<':
-        return '&lt;';
-      case '>':
-        return '&gt;';
-      case '"':
-        return '&quot;';
-      case "'":
-        return '&#039;';
-      default:
-        return match;
+    function escapeHTML(unsafe) {
+      return unsafe.replace(/[&<"']/g, (match) => {
+        switch (match) {
+          case '&':
+            return '&amp;';
+          case '<':
+            return '&lt;';
+          case '>':
+            return '&gt;';
+          case '"':
+            return '&quot;';
+          case "'":
+            return '&#039;';
+          default:
+            return match;
+        }
+      });
     }
-  });
-};
 
-// ... kode selanjutnya ...
-
-const cardData = `
-    <div class="card my-3 shadow-lg bg-body-secondary text-black" style="padding: 30px;">
-        <div class="row">
+    function renderCards() {
+      const cardHtml = cards.map((card, index) => `
+        <div class="card my-3 shadow-lg bg-body-secondary text-black" style="padding: 30px;">
+          <div class="row">
             <div class="col-5 text-center my-auto">
-                <h3>${escapeHTML(namaValue)}</h3>
+              <h3>${escapeHTML(card.nama)}</h3>
             </div>
             <div class="col border-start border-black text-center my-auto">
-                <div class="skill">
-                    <h4>Skills:</h4>
-                    <p>${escapeHTML(skillValue)}</p>
-                </div>
-                <div class="telpon">
-                    <h4>No Telpon:</h4>
-                    <p>${escapeHTML(telponValue)}</p>
-                </div>
-                <div class="alamat">
-                    <h4>Alamat:</h4>
-                    <p>${escapeHTML(alamatValue)}</p>
-                </div>
+              <div class="skill">
+                <h4>Skills:</h4>
+                <p>${escapeHTML(card.skill)}</p>
+              </div>
+              <div class="telpon">
+                <h4>No Telpon:</h4>
+                <p>${escapeHTML(card.telpon)}</p>
+              </div>
+              <div class="alamat">
+                <h4>Alamat:</h4>
+                <p>${escapeHTML(card.alamat)}</p>
+              </div>
+              <button class="btn btn-success" onclick="updateCard(${index})">Update</button>
+              <button class="btn btn-danger" onclick="deleteCard(${index})">Delete</button>
             </div>
+          </div>
         </div>
-    </div>
-`;
+      `).join('');
 
-            arr.push(cardData); 
-            output.innerHTML = arr.join(''); 
-            form.reset(); 
-        });
+      output.innerHTML = cardHtml;
+    }
+
+    function updateCard(index) {
+      const cardToUpdate = cards[index];
+      updateForm.style.display = 'block'; // Show the update form
+      updateForm.addEventListener('submit', (e) => {
+        e.preventDefault();
+
+        const updatedNama = document.getElementById('updatenama').value;
+        const updatedSkill = document.getElementById('updateskill').value;
+        const updatedTelpon = document.getElementById('updatetelpon').value;
+        const updatedAlamat = document.getElementById('updatealamat').value;
+
+        if (updatedNama === '' || updatedSkill === '' || updatedTelpon === '' || updatedAlamat === '') {
+          output.innerHTML = '<p class="text-danger">Data tidak Boleh Kosong</p>';
+        } else {
+          // Update the card data
+          cardToUpdate.nama = updatedNama;
+          cardToUpdate.skill = updatedSkill;
+          cardToUpdate.telpon = updatedTelpon;
+          cardToUpdate.alamat = updatedAlamat;
+          updateForm.style.display = 'none'; // Hide the update form
+          renderCards(); // Update the UI
+        }
+      });
+    }
+
+    function deleteCard(index) {
+      cards.splice(index, 1);
+      updateForm.style.display = 'none';
+      renderCards();
+    }
+
+    form.addEventListener('submit', (e) => {
+      e.preventDefault();
+
+      const nama = document.getElementById('nama').value;
+      const skill = document.getElementById('skill').value;
+      const telpon = document.getElementById('telpon').value;
+      const alamat = document.getElementById('alamat').value;
+
+      if (nama === '' || skill === '' || telpon === '' || alamat === '') {
+        output.innerHTML = '<p class="text-danger">Data tidak Boleh Kosong</p>';
+      } else {
+        cards.push({ nama, skill, telpon, alamat });
+        renderCards();
+        form.reset();
+      }
+    });
 
   </script>
 </body>
-
 </html>
